Bug 464339 - Links to images and non-textish media should not have view-source: links, r+sr=roc