layout/build/nsContentDLF.h
@@ -101,6 +101,7 @@ public:
 
 private:
   static nsresult EnsureUAStyleSheet();
+  static PRBool IsImageContentType(const char* aContentType);
 };
 
 nsresult
